add validation of query arguments
