# beepbeep/dataservice/views/home.py
@@ -1,24 +1,13 @@
 from flask import Blueprint
 import os
+from flakon.util import send_request
 
 static_file_dir = os.path.dirname(os.path.realpath(__file__))
 home = Blueprint('home', __name__)
 
 
 @home.route('/')
-def some():
-    return {'here': 1}
-
-
-# @home.route('/api/<name>')
-# @home.route('/api/<path>/<name>')
-# def render_static(name, path=None):
-#     print(static_file_dir+"/"+name)
-#     if name == 'doc':
-#         return send_from_directory(static_file_dir+"/../static/doc", 'index.html')
-#     else:
-#         if path is not None:
-#             return send_from_directory(static_file_dir+"/../static/doc/"+path, name)
-#         else:
-#             return send_from_directory(static_file_dir + "/../static/doc", name)
-
+def render_static():
+    res = send_request('http://127.0.0.1:5002/user/1', 'PUT', {'id': 1, 'strava_token': 'ciao'})
+    print(res)
+    return res.text
