# beepbeep/dataservice/views/swagger.py
@@ -1,6 +1,6 @@
 import os
 
-from flakon import SwaggerBlueprint
+from flakon import SwaggerBlueprint, util
 from flask import request, jsonify
 from beepbeep.dataservice.database import db, User, Run
 from sqlalchemy import and_
@@ -12,6 +12,8 @@ from json import loads
 HERE = os.path.dirname(__file__)
 YML = os.path.join(HERE, '..', 'static', 'api.yaml')
 api = SwaggerBlueprint('API', __name__, swagger_spec=YML)
+CHALLENGES = os.environ['CHALLENGES']
+OBJECTIVES = os.environ['OBJECTIVES']
 
 
 @api.operation('addRuns')
@@ -43,7 +45,7 @@ def get_runs(user_id):
         fun = and_(fun, start_date <= Run.start_date)
     if finish_date is not None:
         finish_date = datetime.strptime(finish_date, '%Y-%m-%dT%H:%M:%SZ')
-        fun = and_(fun, Run.start_date <= start_date)
+        fun = and_(fun, Run.start_date <= finish_date)
     if max_id is not None:
         fun = and_(fun, Run.id > max_id)
     fun = and_(fun, Run.runner_id == user_id)
@@ -54,10 +56,10 @@ def get_runs(user_id):
 @api.operation('getSingleRun')
 def get_single_run(user_id, run_id):
     if not existing_user(user_id):
-        return bad_response(404, 'Error, No user with ID '+str(user_id))
+        return bad_response(404, 'Error, No user with ID ' + str(user_id))
     q = db.session.query(Run).filter(and_(Run.id == run_id, Run.runner_id == user_id))
     if q.count() == 0:
-        return bad_response(404, 'Error, No run with ID '+str(run_id)+' for User')
+        return bad_response(404, 'Error, No run with ID ' + str(run_id) + ' for User')
     return q.first().to_json()
 
 
@@ -84,7 +86,7 @@ def get_single_user(user_id):
 @api.operation('addUser')
 def add_single_user():
     u = User.from_json(request.json)
-    if existing_user(email=u.email):
+    if existing_user(u.id, u.email):
         return bad_response(400, 'Error, exists already an user with the email: ' + u.email)
     db.session.add(u)
     db.session.commit()
@@ -93,21 +95,23 @@ def add_single_user():
 
 @api.operation('updateSingleUser')
 def update_single_user(user_id):
+    user_id = int(user_id)
     u = User.from_json(request.json)
     if user_id != u.id:
         return bad_response(400, 'user_id mismatch: user_id in path: ' + str(user_id) + ', in json: ' + str(u.id))
-    q = db.query(User).filter(User.id == user_id)
+    q = db.session.query(User).filter(User.id == user_id)
     if q.count() == 0:
         return bad_response(404, 'No user with  ID ' + str(user_id))
     us = q.first()
     if us.email != u.email:
-        q = db.query(User).filter(User.email == u.email)
+        q = db.session.query(User).filter(User.email == u.email)
         if q.count() > 0:
             return bad_response(400, 'Trying to update the email of the user with: ' + u.email + 'but another user '
                                                                                                  'already has that '
+
                                                                                                  'email')
-    for attr in User.__table__.columns:
-        setattr(us, attr, getattr(u, attr))
+    for attr in request.json:
+        setattr(us, attr, request.json[attr])
     db.session.commit()
     return "", 204
 
